src/argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinema-app
  namespace: cinema-app
spec:
  selector:
    app: cinema-app
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
