src/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinema-app-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-api@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: cinema-app.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cinema-app
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: cinema-app-fe
                port:
                  number: 80
